fixing some cross model queries